upgrade to vertx 4.1.0